Regression: Merging objects does not assign materials correctly #100822

Closed
opened 2022-09-05 04:21:42 +02:00 by RedHaloStudio · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-03 09:43, hash: 4b818b1513
Worked: (newest version of Blender that worked as expected)
Caused by f1c0249f34

Short description of error
A object has two materials: RED BLUE(in order)
B object has two materials: GREEN RED(in order)
When A and B are merged, the material is incorrectly specified

QQ截图20220905101106.jpg

blender file:
BUG.blend

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-03 09:43, hash: `4b818b1513` Worked: (newest version of Blender that worked as expected) Caused by f1c0249f34 **Short description of error** A object has two materials: RED BLUE(in order) B object has two materials: GREEN RED(in order) When A and B are merged, the material is incorrectly specified ![QQ截图20220905101106.jpg](https://archive.blender.org/developer/F13460405/QQ截图20220905101106.jpg) blender file: [BUG.blend](https://archive.blender.org/developer/F13460407/BUG.blend) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @HMRP

Added subscriber: @HMRP

blender/blender-addons#100839 was marked as duplicate of this issue

blender/blender-addons#100839 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can redo this in latest master build. This does not happen in previous release versions.
Will find when exactly this changed

Hi, thanks for the report. Can redo this in latest master build. This does not happen in previous release versions. Will find when exactly this changed
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member
Caused by f1c0249f34 @HooglyBoogly ^
Pratik Borhade changed title from Merging objects does not assign materials correctly to Regression: Merging objects does not assign materials correctly 2022-09-05 06:33:45 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Looked at this a bit, couple of things I noticed in join_mesh_single:

  • shouldnt the AttributeWriter be on the destination mesh?
  • shouldnt this take into account the polyofs?
  • the size of the MutableVArraySpan is also not the size of the combined mesh?
Looked at this a bit, couple of things I noticed in `join_mesh_single`: - shouldnt the `AttributeWriter` be on the destination mesh? - shouldnt this take into account the `polyofs`? - the size of the MutableVArraySpan is also not the size of the combined mesh?
Member

Think I got a fix which does the following:

  • work on the destination polydata
  • take polyofs into account

(bit on shaky ground, but will post nonetheless)

Think I got a fix which does the following: - work on the destination polydata - take polyofs into account (bit on shaky ground, but will post nonetheless)

This issue was referenced by ecf3287533

This issue was referenced by ecf3287533c8adc90250bc13957eddb7b2e22fc6

Added subscriber: @pm_jothi

Added subscriber: @pm_jothi

Added subscribers: @silex, @mano-wii

Added subscribers: @silex, @mano-wii
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2022-09-08 09:09:46 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100822
No description provided.